--- a/index.html
+++ b/index.html
@@ -409,6 +409,8 @@ Error message and password prompt
 
 <li>$:/state/toc/TableOfContents/Current Projects-Global Ethnic Majorities Board Association--118161433</li>
 
+<li>$:/state/toc/TableOfContents/Organisational Practice-Global Ethnic Majorities Board Association--118161433</li>
+
 <li>$:/state/toc/TableOfContents/People who haunt me-Jack Halberstam--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Resources-artist resources--118161433</li>
@@ -13118,7 +13120,7 @@ exports.context = contextWidget;
 <div created="20210927073606510" modified="20210927074104780" title="$:/state/toc/TableOfContents-Journal--118161433">
 <pre>close</pre>
 </div>
-<div created="20210926064608845" modified="20220218174241909" title="$:/state/toc/TableOfContents-Organisational Practice--118161433">
+<div created="20210926064608845" modified="20220218182228523" title="$:/state/toc/TableOfContents-Organisational Practice--118161433">
 <pre>close</pre>
 </div>
 <div created="20211203103217012" modified="20220218174444827" title="$:/state/toc/TableOfContents-People who haunt me--118161433">
@@ -13193,6 +13195,9 @@ exports.context = contextWidget;
 <div created="20210926070707157" modified="20211005145317550" title="$:/state/toc/TableOfContents/Current Projects-Global Ethnic Majorities Board Association--118161433">
 <pre>close</pre>
 </div>
+<div created="20220218181829254" modified="20220218181829254" title="$:/state/toc/TableOfContents/Organisational Practice-Global Ethnic Majorities Board Association--118161433">
+<pre>open</pre>
+</div>
 <div created="20211209074628957" modified="20211209074636517" title="$:/state/toc/TableOfContents/People who haunt me-Jack Halberstam--118161433">
 <pre>open</pre>
 </div>
@@ -13226,7 +13231,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220218172914554" list="[[Global Ethnic Majorities Board Association]] Hello [[Current and Recent Work]] [[Selected Works]] [[Site updates]]" modified="20220218174408548" title="$:/StoryList">
+<div created="20220218181830183" list="[[31 Mar 2021 GEMBA Meeting]] [[Global Ethnic Majorities Board Association]] Hello [[Current and Recent Work]] [[Selected Works]] [[Site updates]]" modified="20220218182114524" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13362,7 +13367,7 @@ exports.context = contextWidget;
 <div bag="default" created="20200127165334843" modified="20200808142340054" revision="0" tags="$:/giffmex/stroll" title="$:/view" type="text/vnd.tiddlywiki">
 <pre>classic</pre>
 </div>
-<div created="20210925130108545" modified="20220218174125344" tags="[[Global Ethnic Majorities Board Association]]" title="13 May 2021 GEMBA Meeting">
+<div created="20210925130108545" modified="20220218182050853" tags="[[Global Ethnic Majorities Board Association]]" title="13 May 2021 GEMBA Meeting">
 <pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/GEMBA_amy-feet.png]]
 
 
@@ -13374,11 +13379,11 @@ Calling all Black and Global Ethnic Majorities people (GEM) who are Board member
 
 Following our first workshop in March, we invite you to our second meeting where we will explore practical next steps to create a safe space for peer support, learning and sharing knowledge. The meeting’s aims are to follow up on the online vote we took to identify our top desired priorities, to spend more time getting to know each other, and to discuss how we can share responsibilities. 
 
-To join us, please subscribe here and a Zoom link will be sent to you on the day.
+To join us, please [[subscribe here|https://be91f51d.sibforms.com/serve/MUIEACV8M3ofzFXmYa4HpwdiDuoNOnv4Me1NsybDjjEfR9-_YNkxmJFaGX2KLfL4d3BMS4W0BqnAvEJITTIDuCFG2X1xYuS2TyFnAwbZnzbdcEiOcl9pcnp80jKLiu9jTzbCj4olHlDnT0xcB8WrbD8UnXA27VBN2PcTZ8GIg9RGQ1xiVumt92jLwKGqcFmv--ptjK7h1Yh0BHOq]] and a Zoom link will be sent to you on the day.
 
 You will be asked to declare that you are a GEM person and are in, have been in or are about to join a board.
 
-Notes: GEMBA arose out of preparatory discussions for Jade Montserrat’s public conversation “Act 2: Scoring Performance” with Amy Lawrence and Jack Tan
+Notes: GEMBA arose out of preparatory discussions for Jade Montserrat’s public conversation “[[Act 2: Scoring Performance|https://iniva.org/programme/events/act-2-scoring-performance/]]” with Amy Lawrence and Jack Tan
 
 Image:   FEELFEELFEEL: Amy Lawrence: Screenshot: FEELFEEL 2/3: Video:Commissioned by Dance4: Photo Credit: Scout Stuart.</pre>
 </div>
@@ -13406,7 +13411,7 @@ Notes: GEMBA arose out of preparatory discussions for Jade Montserrat’s public
 
 Image: Jack Tan (2014), Will You Won’t You, performance inspired by the politics of dressage and the cakewalk, co-choreographed with participants for the London Art 14’s performance programme curated by Amanprit Sandhu. Photo: Sylvain Deleu</pre>
 </div>
-<div created="20210925125809993" modified="20220218174159759" tags="[[Global Ethnic Majorities Board Association]]" title="31 Mar 2021 GEMBA Meeting">
+<div created="20210925125809993" modified="20220218182208502" tags="[[Global Ethnic Majorities Board Association]]" title="31 Mar 2021 GEMBA Meeting">
 <pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/Decision-pong_057.jpg]]
 
 ''&lt;br&gt;31 Mar 2021
@@ -13421,7 +13426,7 @@ The workshop’s aim is to gather information so that we can collectively decide
 
 You will be asked to declare that you are a GEM person and are in, have been in or are about to join a board.
 
-Notes: GEMBA arose out of preparatory discussions for Jade Montserrat’s public conversation “Act 2: Scoring Performance” with Amy Lawrence and Jack Tan.
+Notes: GEMBA arose out of preparatory discussions for Jade Montserrat’s public conversation “[[Act 2: Scoring Performance|https://iniva.org/programme/events/act-2-scoring-performance/]]” with Amy Lawrence and Jack Tan.
 
 Image: Jack Tan (2015), Decision Pong: a boardroom decision-making game; ceramics, ping pong balls, conference table. Part of How To Do Things With Rules solo show, ICA Singapore.</pre>
 </div>
@@ -14060,7 +14065,7 @@ Before you start storing important information in Stroll, it is vital to make su
 See the [[control panel|$:/ControlPanel]] for more options.
 </pre>
 </div>
-<div created="20210925123949321" modified="20220218174729491" tags="[[Social Practice]] [[Current and Recent Work]] [[Organisational Practice]]" title="Global Ethnic Majorities Board Association">
+<div created="20210925123949321" modified="20220218181929614" tags="[[Social Practice]] [[Current and Recent Work]] [[Organisational Practice]]" title="Global Ethnic Majorities Board Association">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Jade%20Montserrat_ecclesiastes-1250x560-1.jpg?raw=true]]
 
 Out of preparations for an [[In conversation with Jade Montserrat, Amy Lawrence and Jack Tan]], the idea for a Global Ethnic Majorities Board Association (GEMBA) was born. The aim was to create a confidential and supportive meeting space where global ethnic majority trustees on UK visual arts boards could meet and share knowledge. 
@@ -14070,6 +14075,11 @@ This extract from our [[first call out|https://iniva.org/programme/events/global
 &lt;&lt;&lt;
 More than ever, creating solidarity among Black and Global Ethnic Majorities board members from across the UK is an urgent enterprise. They recognise that the experience of GEM board members can be isolating, and physically, emotionally and intellectually challenging. Reports of being gaslit, invisibile-ized and objectified are not uncommon, and they would welcome fellow GEM board members to come together to strategise and collectivise. 
 &lt;&lt;&lt;
+
+&lt;br&gt;
+
+Join our mailing list [[here|https://be91f51d.sibforms.com/serve/MUIEACV8M3ofzFXmYa4HpwdiDuoNOnv4Me1NsybDjjEfR9-_YNkxmJFaGX2KLfL4d3BMS4W0BqnAvEJITTIDuCFG2X1xYuS2TyFnAwbZnzbdcEiOcl9pcnp80jKLiu9jTzbCj4olHlDnT0xcB8WrbD8UnXA27VBN2PcTZ8GIg9RGQ1xiVumt92jLwKGqcFmv--ptjK7h1Yh0BHOq]]
+
 &lt;br&gt;
 
 !!! List of GEMBA meetings to date:
