--- a/index.html
+++ b/index.html
@@ -517,6 +517,8 @@ Error message and password prompt
 
 <li>Closure</li>
 
+<li>Conference</li>
+
 <li>Consulting</li>
 
 <li>Contact</li>
@@ -13114,7 +13116,7 @@ exports.context = contextWidget;
 <div created="20211028130527432" modified="20211028151842837" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20210925062958213" modified="20220223054144403" title="$:/state/tab/sidebar--595412856">
+<div created="20210925062958213" modified="20220226114405846" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
 </div>
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -13123,8 +13125,8 @@ exports.context = contextWidget;
 <div created="20211209081213628" modified="20220218081947604" title="$:/state/toc/TableOfContents-About--118161433">
 <pre>close</pre>
 </div>
-<div created="20220223054537977" modified="20220223054716683" title="$:/state/toc/TableOfContents-Artworks--118161433">
-<pre>close</pre>
+<div created="20220223054537977" modified="20220226120554404" title="$:/state/toc/TableOfContents-Artworks--118161433">
+<pre>open</pre>
 </div>
 <div created="20210925122403466" modified="20211214094444336" title="$:/state/toc/TableOfContents-Concepts--118161433">
 <pre>close</pre>
@@ -13132,7 +13134,7 @@ exports.context = contextWidget;
 <div created="20210926083300728" modified="20220223054603474" title="$:/state/toc/TableOfContents-Curating--118161433">
 <pre>close</pre>
 </div>
-<div created="20211203110358830" modified="20220223054622490" title="$:/state/toc/TableOfContents-Current and Recent Work--118161433">
+<div created="20211203110358830" modified="20220226110916757" title="$:/state/toc/TableOfContents-Current and Recent Work--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926064611805" modified="20211203104743036" title="$:/state/toc/TableOfContents-Current Projects--118161433">
@@ -13210,13 +13212,13 @@ exports.context = contextWidget;
 <div created="20211214093510622" modified="20220218073049123" title="$:/state/toc/TableOfContents/About/CV/Projects by year-2021--118161433">
 <pre>close</pre>
 </div>
-<div created="20220223054542393" modified="20220223054543529" title="$:/state/toc/TableOfContents/Artworks-Installation--118161433">
+<div created="20220223054542393" modified="20220226120612197" title="$:/state/toc/TableOfContents/Artworks-Installation--118161433">
 <pre>close</pre>
 </div>
-<div created="20220223054544601" modified="20220223054556641" title="$:/state/toc/TableOfContents/Artworks-Organisational Practice--118161433">
+<div created="20220223054544601" modified="20220226120606404" title="$:/state/toc/TableOfContents/Artworks-Organisational Practice--118161433">
 <pre>close</pre>
 </div>
-<div created="20220223054558193" modified="20220223054600466" title="$:/state/toc/TableOfContents/Artworks-Performance--118161433">
+<div created="20220223054558193" modified="20220226120615236" title="$:/state/toc/TableOfContents/Artworks-Performance--118161433">
 <pre>close</pre>
 </div>
 <div created="20211203125832612" modified="20211203125833364" title="$:/state/toc/TableOfContents/Concepts-care--118161433">
@@ -13297,7 +13299,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220223053935585" list="" modified="20220223054428550" title="$:/StoryList">
+<div list="Conference Hello [[Current and Recent Work]] [[Selected Works]] [[Site updates]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13726,6 +13728,33 @@ Work displayed in London can be viewed by appointment at the Department for Heal
 
 2. The General Social Care Council was set up in 2001 following the enactment of the Care Standards Act 2000 and the lessons learnt from the Victoria Climbie case. The GSCC inherited the responsibilities of the previous Central Council for Education and Training in Social Work (1970-2001). It’s main responsibility was to establish and maintain the Register of Social Workers. The GSCC exists over two sites: Rugby and London. The London office was located in London Bridge until it was moved in its final months to the Department for Health building in Elephant and Castle.
 </pre>
+</div>
+<div created="20220226114351546" modified="20220226120532081" tags="Installation" title="Conference">
+<pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Conference%20(2015)%20Jack%20Tan%20ICA-Singapore%20-%20Conference%20Table.jpg?raw=true]]
+
+''Conference (2015)'' is a bookable conference table situated within the Earl Lu Gallery of the Institute of Contemporary Art Singapore. The conference table is available free for use by staff and students of the Lasalle College of Arts and by local businesses for the duration of the exhibition. It exists as an installation and when in use for meetings, as a live sculpture. The work also contains 3 ceramic decision-making aids that may be of service to users during their meetings:
+
+*''Decision Pong (2015)'' comprises a ping-pong ball and set of ceramic cups  with decisions labelled on each one. A decision is made by throwing the ball and seeing which up it lands in. The work offers committees to incorporate chance into their decision making.
+*''Conch (2015)'' can be used to impose a rule of turn-taking during meetings whereby the person holding the conch has the right to speak. It is a reminder of good meeting etiquette.
+*''Ballot box (2015)'' is a tool for taking secret votes during meetings. Instead of the usual metal box with sharp edges, this ballot box takes the form of a tactile burnished ceramic pod. Hopefully this object also softens the edges of votes to be less adversarial, making voting less situated in the sphere of rights and turning them more into wishes and hopes.
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Conference%20(2015)%20Jack%20Tan%20ICA-Singapore%20055_sm.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Conference%20(2015)%20Jack%20Tan%20ICA-Singapore%20057_sm.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Conference%20(2015)%20Jack%20Tan%20ICA-Singapore%20062_sm.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Conference%20(2015)%20Jack%20Tan%20ICA-Singapore%20065_sm.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Conference%20(2015)%20Jack%20Tan%20ICA-Singapore%20067_sm.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Conference%20(2015)%20Jack%20Tan%20ICA-Singapore%20069_sm.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Conference%20(2015)%20Jack%20Tan%20ICA-Singapore%20085_sm.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Conference%20(2015)%20Jack%20Tan%20ICA-Singapore%20025_sm.jpg?raw=true]]
+
+Conference (2015) is part of Jack Ky Tan's solo exhibition ''How To Do Things With Rules'' at the ICA Singapore, 2015. Curated by Melanie Pocock.</pre>
 </div>
 <div created="20211214094057199" modified="20211214094115887" tags="[[Projects by type]]" title="Consulting">
 <pre></pre>
