--- a/index.html
+++ b/index.html
@@ -409,6 +409,8 @@ Error message and password prompt
 
 <li>$:/state/toc/TableOfContents/Artworks-Performance--118161433</li>
 
+<li>$:/state/toc/TableOfContents/Artworks/Organisational Practice-Global Ethnic Majorities Board Association--118161433</li>
+
 <li>$:/state/toc/TableOfContents/Concepts-care--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Concepts-charities--118161433</li>
@@ -490,6 +492,8 @@ Error message and password prompt
 <li>26 Oct 2021 GEMBA Meeting</li>
 
 <li>31 Mar 2021 GEMBA Meeting</li>
+
+<li>6 April 2022 GEMBA Meeting</li>
 
 <li>A Kiss Is Just A Kiss</li>
 
@@ -13125,8 +13129,8 @@ exports.context = contextWidget;
 <div created="20211209081213628" modified="20220218081947604" title="$:/state/toc/TableOfContents-About--118161433">
 <pre>close</pre>
 </div>
-<div created="20220223054537977" modified="20220226120554404" title="$:/state/toc/TableOfContents-Artworks--118161433">
-<pre>open</pre>
+<div created="20220223054537977" modified="20220302112424461" title="$:/state/toc/TableOfContents-Artworks--118161433">
+<pre>close</pre>
 </div>
 <div created="20210925122403466" modified="20211214094444336" title="$:/state/toc/TableOfContents-Concepts--118161433">
 <pre>close</pre>
@@ -13215,11 +13219,14 @@ exports.context = contextWidget;
 <div created="20220223054542393" modified="20220226120612197" title="$:/state/toc/TableOfContents/Artworks-Installation--118161433">
 <pre>close</pre>
 </div>
-<div created="20220223054544601" modified="20220226120606404" title="$:/state/toc/TableOfContents/Artworks-Organisational Practice--118161433">
-<pre>close</pre>
+<div created="20220223054544601" modified="20220302111456937" title="$:/state/toc/TableOfContents/Artworks-Organisational Practice--118161433">
+<pre>open</pre>
 </div>
 <div created="20220223054558193" modified="20220226120615236" title="$:/state/toc/TableOfContents/Artworks-Performance--118161433">
 <pre>close</pre>
+</div>
+<div created="20220302111458970" modified="20220302111458970" title="$:/state/toc/TableOfContents/Artworks/Organisational Practice-Global Ethnic Majorities Board Association--118161433">
+<pre>open</pre>
 </div>
 <div created="20211203125832612" modified="20211203125833364" title="$:/state/toc/TableOfContents/Concepts-care--118161433">
 <pre>close</pre>
@@ -13299,7 +13306,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Conference Hello [[Current and Recent Work]] [[Selected Works]] [[Site updates]]" title="$:/StoryList">
+<div created="20220302111502986" list="[[6 April 2022 GEMBA Meeting]] [[Global Ethnic Majorities Board Association]] Hello [[Current and Recent Work]] [[Selected Works]] [[Site updates]]" modified="20220302112341925" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13497,6 +13504,23 @@ You will be asked to declare that you are a GEM person and are in, have been in 
 Notes: GEMBA arose out of preparatory discussions for Jade Montserrat’s public conversation “[[Act 2: Scoring Performance|https://iniva.org/programme/events/act-2-scoring-performance/]]” with Amy Lawrence and Jack Tan.
 
 Image: Jack Tan (2015), Decision Pong: a boardroom decision-making game; ceramics, ping pong balls, conference table. Part of How To Do Things With Rules solo show, ICA Singapore.</pre>
+</div>
+<div created="20220302111602841" modified="20220302112407967" title="6 April 2022 GEMBA Meeting">
+<pre>[img[https://github.com/jackkytan/websiteimages/blob/master/GEMBA%20Jade's%20notebook.jpg?raw=true]]
+
+Calling all Black and Global Ethnic Majorities (GEM) people who are Board members or trustees in UK arts and culture organisations. More than ever, creating solidarity among Black and Global Ethnic Majorities board members from across the UK is an urgent enterprise. We recognise that the experiences of GEM board members can be isolating, and physically, emotionally and intellectually challenging.
+
+Following our first workshop in March, our second meeting in May 2021, and third one in October 2021, we invite you to our 4th meeting on Wednesday 6 April 2022, 6.30pm. The first half of this meeting will provide a space to share stories and to offer peer support. In the second half, we would like to open up a knowledge-sharing discussion about alternative models of organising, decision-making and assembling that we might be able to draw upon from non-Eurocentric perspectives and heritages.
+
+To join us, please [[sign up on Eventbrite|https://www.eventbrite.co.uk/e/global-ethnic-majorities-board-association-4thgemba-meeting-tickets-287796134987]] and then a Zoom link will be sent to you on the day. You will be asked to declare that you are a GEM person and are in, have been in or are about to join a board.
+
+Place: Zoom (captioned, [[hosted by Iniva|https://iniva.org/programme/events/global-ethnic-majorities-board-association-4th-gemba-meeting/]])
+
+You can contact us at: gemba82.6@gmail.com (82.6% is the approximate size of the global ethnic majority currently)
+
+Notes: GEMBA arose out of preparatory discussions for Jade Montserrat’s public conversation “[[Act 2: Scoring Performance|https://iniva.org/programme/events/act-2-scoring-performance/]]” with Amy Lawrence and Jack Tan
+
+Image credit: Excerpt from Jade Montserrat’s notebook pertaining to her thoughts about GEMBA and boards, 2022.</pre>
 </div>
 <div created="20210925120957665" modified="20210925121534406" title="A Kiss Is Just A Kiss">
 <pre>[img[https://previews.dropbox.com/p/thumb/ABTADpzT5cL-Iak0yeAqdX-kcRUdMOQclfqq1P8mBaxJzHRFNiQcnihX_XfpapRkY8TNmcspkG8EH2apRA87Bc-QaXWudApLA3JuO2DUJuq5NyRWqzuVilCKOAaGLAcztD9EG8IHNlgCZmmwKaJekNXqh29nchago5GeJrYmHqyRclQdTZIlSlpkHJiCozYEKeunVOSuXcQe5Lzzbvj8UzeUev5I4ctEEmtuBs4OA3W6OURr6auaHA4rGZIeKso01NaNmRm9NMdZ8B-ut5cj2oqZDqs-uBy1Fat271rR1o8Be8BVW5_slwNQolOj1_VPHL0qPoxK2o7vxGmsVJNhVjiNTKKOt_f6TxH7hFzzdWD20w/p.jpeg?size=1280x960&amp;size_mode=3]]
@@ -14160,7 +14184,7 @@ Before you start storing important information in Stroll, it is vital to make su
 See the [[control panel|$:/ControlPanel]] for more options.
 </pre>
 </div>
-<div created="20210925123949321" modified="20220218181929614" tags="[[Social Practice]] [[Current and Recent Work]] [[Organisational Practice]]" title="Global Ethnic Majorities Board Association">
+<div created="20210925123949321" modified="20220302111546699" tags="[[Social Practice]] [[Current and Recent Work]] [[Organisational Practice]]" title="Global Ethnic Majorities Board Association">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Jade%20Montserrat_ecclesiastes-1250x560-1.jpg?raw=true]]
 
 Out of preparations for an [[In conversation with Jade Montserrat, Amy Lawrence and Jack Tan]], the idea for a Global Ethnic Majorities Board Association (GEMBA) was born. The aim was to create a confidential and supportive meeting space where global ethnic majority trustees on UK visual arts boards could meet and share knowledge. 
@@ -14181,7 +14205,8 @@ Join our mailing list [[here|https://be91f51d.sibforms.com/serve/MUIEACV8M3ofzFX
 
 *[[31 Mar 2021 GEMBA Meeting]]
 *[[13 May 2021 GEMBA Meeting]]
-*[[26 Oct 2021 GEMBA Meeting]]</pre>
+*[[26 Oct 2021 GEMBA Meeting]]
+* [[6 April 2022 GEMBA Meeting]]</pre>
 </div>
 <div created="20210925110057227" modified="20220223054328738" tags="[[Selected Works]] Installation Performance" title="Hearings">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Hearings_mg_1290.jpg?raw=true]]
