--- a/index.html
+++ b/index.html
@@ -13138,8 +13138,8 @@ exports.context = contextWidget;
 <div created="20210926083300728" modified="20220223054603474" title="$:/state/toc/TableOfContents-Curating--118161433">
 <pre>close</pre>
 </div>
-<div created="20211203110358830" modified="20220226110916757" title="$:/state/toc/TableOfContents-Current and Recent Work--118161433">
-<pre>close</pre>
+<div created="20211203110358830" modified="20220302114047348" title="$:/state/toc/TableOfContents-Current and Recent Work--118161433">
+<pre>open</pre>
 </div>
 <div created="20210926064611805" modified="20211203104743036" title="$:/state/toc/TableOfContents-Current Projects--118161433">
 <pre>open</pre>
@@ -13306,7 +13306,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220302111502986" list="[[6 April 2022 GEMBA Meeting]] [[Global Ethnic Majorities Board Association]] Hello [[Current and Recent Work]] [[Selected Works]] [[Site updates]]" modified="20220302112341925" title="$:/StoryList">
+<div created="20220302114049757" list="[[Global Ethnic Majorities Board Association]] Hello [[Current and Recent Work]] [[Selected Works]] [[Site updates]]" modified="20220302114057653" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13505,7 +13505,7 @@ Notes: GEMBA arose out of preparatory discussions for Jade Montserrat’s public
 
 Image: Jack Tan (2015), Decision Pong: a boardroom decision-making game; ceramics, ping pong balls, conference table. Part of How To Do Things With Rules solo show, ICA Singapore.</pre>
 </div>
-<div created="20220302111602841" modified="20220302112407967" title="6 April 2022 GEMBA Meeting">
+<div created="20220302111602841" modified="20220302114103014" tags="[[Global Ethnic Majorities Board Association]]" title="6 April 2022 GEMBA Meeting">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/GEMBA%20Jade's%20notebook.jpg?raw=true]]
 
 Calling all Black and Global Ethnic Majorities (GEM) people who are Board members or trustees in UK arts and culture organisations. More than ever, creating solidarity among Black and Global Ethnic Majorities board members from across the UK is an urgent enterprise. We recognise that the experiences of GEM board members can be isolating, and physically, emotionally and intellectually challenging.
