--- a/index.html
+++ b/index.html
@@ -13306,7 +13306,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220302114049757" list="[[Global Ethnic Majorities Board Association]] Hello [[Current and Recent Work]] [[Selected Works]] [[Site updates]]" modified="20220302114057653" title="$:/StoryList">
+<div created="20220314143225692" list="[[SEPALS conference]] Hello [[Current and Recent Work]] [[Selected Works]] [[Site updates]]" modified="20220314143225692" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -15105,10 +15105,22 @@ The idea of chance not only alludes to John Cage and his idea that ‘everything
 
 </pre>
 </div>
-<div created="20211203105617490" modified="20211214093505033" tags="Talks care [[Current and Recent Work]] 2021" title="SEPALS conference">
+<div created="20211203105617490" modified="20220314143904870" tags="Talks care [[Current and Recent Work]] 2021" title="SEPALS conference">
 <pre>I presented a talk on how we move from activism to a beyond of activism to imagine new methodologies or ways of experimenting to create a new arts ecology.
 
-[[Read the text of my talk here|https://docs.google.com/document/d/1x5ZIX8KHUTQ1m1vPat77z49Ma56kxlg5LnkjoKM6XfA/edit?usp=sharing]]
+[[Read the text of my talk BEYOND ACTIVISM here|https://docs.google.com/document/d/1x5ZIX8KHUTQ1m1vPat77z49Ma56kxlg5LnkjoKM6XfA/edit?usp=sharing]]
+
+!!! Part 1 - Artist Activism and the case of CFCCA
+
+&lt;iframe width=&quot;560&quot; height=&quot;315&quot; src=&quot;https://www.youtube.com/embed/Ab8KdAosf0o&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;
+
+!!! Part 2 - The Beyond of (ESEA) Activism
+
+&lt;iframe width=&quot;560&quot; height=&quot;315&quot; src=&quot;https://www.youtube.com/embed/K_MIqcnSPYo&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;
+
+!!! Part 3 - Artistic Experiments in the Beyond (5 examples of my own experimental projects)
+
+I will upload this once I have had time to add images of my work into the video.
 
 ------
 
