--- a/index.html
+++ b/index.html
@@ -13168,31 +13168,31 @@ exports.context = contextWidget;
 <div created="20220218174250478" modified="20220218174312757" title="$:/state/toc/TableOfContents-Reading group--118161433">
 <pre>open</pre>
 </div>
-<div created="20210926081024149" modified="20220223054500181" title="$:/state/toc/TableOfContents-Research--118161433">
+<div created="20210926081024149" modified="20220322083447155" title="$:/state/toc/TableOfContents-Research--118161433">
 <pre>close</pre>
 </div>
-<div created="20211005145901891" modified="20220218174347164" title="$:/state/toc/TableOfContents-Residencies--118161433">
+<div created="20211005145901891" modified="20220322083449691" title="$:/state/toc/TableOfContents-Residencies--118161433">
 <pre>close</pre>
 </div>
-<div created="20211203083716975" modified="20220223054718379" title="$:/state/toc/TableOfContents-Resources--118161433">
+<div created="20211203083716975" modified="20220322083518426" title="$:/state/toc/TableOfContents-Resources--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926053815363" modified="20220218174407788" title="$:/state/toc/TableOfContents-Sculpture--118161433">
 <pre>close</pre>
 </div>
-<div created="20210925104810836" modified="20220223054642171" title="$:/state/toc/TableOfContents-Selected Works--118161433">
+<div created="20210925104810836" modified="20220322083609840" title="$:/state/toc/TableOfContents-Selected Works--118161433">
 <pre>close</pre>
 </div>
 <div created="20210925130341602" modified="20220223054344263" title="$:/state/toc/TableOfContents-Social Practice--118161433">
 <pre>open</pre>
 </div>
-<div created="20210925123830757" modified="20220223054705058" title="$:/state/toc/TableOfContents-Talks--118161433">
+<div created="20210925123830757" modified="20220322083722965" title="$:/state/toc/TableOfContents-Talks--118161433">
 <pre>close</pre>
 </div>
 <div created="20220223054502133" modified="20220223054714682" title="$:/state/toc/TableOfContents-Themes--118161433">
 <pre>close</pre>
 </div>
-<div created="20211005150956272" modified="20220223054529832" title="$:/state/toc/TableOfContents-Writing--118161433">
+<div created="20211005150956272" modified="20220322083724126" title="$:/state/toc/TableOfContents-Writing--118161433">
 <pre>close</pre>
 </div>
 <div created="20211214093344462" modified="20220218073124706" title="$:/state/toc/TableOfContents/About-CV--118161433">
@@ -13249,8 +13249,8 @@ exports.context = contextWidget;
 <div created="20211209074628957" modified="20211209074636517" title="$:/state/toc/TableOfContents/People who haunt me-Jack Halberstam--118161433">
 <pre>open</pre>
 </div>
-<div created="20220218174354532" modified="20220223054647722" title="$:/state/toc/TableOfContents/Resources-artist resources--118161433">
-<pre>close</pre>
+<div created="20220218174354532" modified="20220322083451979" title="$:/state/toc/TableOfContents/Resources-artist resources--118161433">
+<pre>open</pre>
 </div>
 <div created="20211203103956856" modified="20220223054650051" title="$:/state/toc/TableOfContents/Resources-trustee resources--118161433">
 <pre>close</pre>
@@ -13306,7 +13306,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220314143225692" list="[[SEPALS conference]] Hello [[Current and Recent Work]] [[Selected Works]] [[Site updates]]" modified="20220314143225692" title="$:/StoryList">
+<div created="20220322083453468" list="Hello [[Current and Recent Work]] [[Selected Works]] [[Site updates]]" modified="20220322083704311" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -15044,7 +15044,7 @@ First half - What are trustees' current duties and liabilities?
 
 * Reviewing organisational history is a useful way to understand its culture. Lux's history is documented, among other places, in this Moving Image Review &amp; Art Journal article: [[Lux et Umbra: On the slow rise and fast fall of the Lux Centre|https://www.ingentaconnect.com/content/intellect/miraj/2017/00000006/f0020001/art00019]] by Ben Cook.</pre>
 </div>
-<div created="20220208153655156" modified="20220208155319647" tags="[[artist resources]] [[Organisational Practice]]" title="Sample artist contract">
+<div created="20220208153655156" modified="20220322083506269" tags="[[artist resources]] [[Organisational Practice]] [[Current and Recent Work]]" title="Sample artist contract">
 <pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/FACT%20sample%20contract.jpg]]
 
 In 2021, I was invited my [[FACT Liverpool|www.fact.co.uk]] to be their inaugural artist-in-residence on their Board of Trustees. We met, chatted about our ideas on governance, agreed on what the residency could look like and how we would work together. 
