--- a/index.html
+++ b/index.html
@@ -565,6 +565,8 @@ Error message and password prompt
 
 <li>Actor-Network Theory</li>
 
+<li>agree ... but</li>
+
 <li>artist resources</li>
 
 <li>Artistic Practice</li>
@@ -630,6 +632,8 @@ Error message and password prompt
 <li>GettingStarted</li>
 
 <li>Global Ethnic Majorities Board Association</li>
+
+<li>Glossary</li>
 
 <li>Hearings</li>
 
@@ -13206,7 +13210,7 @@ exports.context = contextWidget;
 <div created="20211028130527432" modified="20211028151842837" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20210925062958213" modified="20220513091103218" title="$:/state/tab/sidebar--595412856">
+<div created="20210925062958213" modified="20220513115024368" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
 </div>
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -13215,7 +13219,7 @@ exports.context = contextWidget;
 <div created="20211209081213628" modified="20220513110226263" title="$:/state/toc/TableOfContents-About--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513071259660" modified="20220513110123095" title="$:/state/toc/TableOfContents-Artistic Practice--118161433">
+<div created="20220513071259660" modified="20220513114509355" title="$:/state/toc/TableOfContents-Artistic Practice--118161433">
 <pre>close</pre>
 </div>
 <div created="20220223054537977" modified="20220513064752478" title="$:/state/toc/TableOfContents-Artworks--118161433">
@@ -13230,7 +13234,7 @@ exports.context = contextWidget;
 <div created="20211203110358830" modified="20220513065223638" title="$:/state/toc/TableOfContents-Current and Recent Work--118161433">
 <pre>open</pre>
 </div>
-<div created="20220513065309542" modified="20220513110125855" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
+<div created="20220513065309542" modified="20220513124133159" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926064611805" modified="20211203104743036" title="$:/state/toc/TableOfContents-Current Projects--118161433">
@@ -13269,7 +13273,7 @@ exports.context = contextWidget;
 <div created="20211005145901891" modified="20220513071210173" title="$:/state/toc/TableOfContents-Residencies--118161433">
 <pre>open</pre>
 </div>
-<div created="20211203083716975" modified="20220513071533972" title="$:/state/toc/TableOfContents-Resources--118161433">
+<div created="20211203083716975" modified="20220513124134014" title="$:/state/toc/TableOfContents-Resources--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926053815363" modified="20220218174407788" title="$:/state/toc/TableOfContents-Sculpture--118161433">
@@ -13281,10 +13285,10 @@ exports.context = contextWidget;
 <div created="20210925130341602" modified="20220223054344263" title="$:/state/toc/TableOfContents-Social Practice--118161433">
 <pre>open</pre>
 </div>
-<div created="20220513071349532" modified="20220513091649799" title="$:/state/toc/TableOfContents-Study--118161433">
+<div created="20220513071349532" modified="20220513114519819" title="$:/state/toc/TableOfContents-Study--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513090317597" modified="20220513091150321" title="$:/state/toc/TableOfContents-Talks and Workshops--118161433">
+<div created="20220513090317597" modified="20220513114629874" title="$:/state/toc/TableOfContents-Talks and Workshops--118161433">
 <pre>close</pre>
 </div>
 <div created="20210925123830757" modified="20220513085902952" title="$:/state/toc/TableOfContents-Talks--118161433">
@@ -13293,10 +13297,10 @@ exports.context = contextWidget;
 <div created="20220223054502133" modified="20220513071356044" title="$:/state/toc/TableOfContents-Themes--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513085809112" modified="20220513085902280" title="$:/state/toc/TableOfContents-Work by year--118161433">
+<div created="20220513085809112" modified="20220513114631498" title="$:/state/toc/TableOfContents-Work by year--118161433">
 <pre>close</pre>
 </div>
-<div created="20211005150956272" modified="20220513085900682" title="$:/state/toc/TableOfContents-Writing--118161433">
+<div created="20211005150956272" modified="20220513114634923" title="$:/state/toc/TableOfContents-Writing--118161433">
 <pre>close</pre>
 </div>
 <div created="20211214093344462" modified="20220218073124706" title="$:/state/toc/TableOfContents/About-CV--118161433">
@@ -13320,8 +13324,8 @@ exports.context = contextWidget;
 <div created="20211214093510622" modified="20220218073049123" title="$:/state/toc/TableOfContents/About/CV/Projects by year-2021--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513091713456" modified="20220513091713456" title="$:/state/toc/TableOfContents/Artistic Practice-Curating--118161433">
-<pre>open</pre>
+<div created="20220513091713456" modified="20220513114508011" title="$:/state/toc/TableOfContents/Artistic Practice-Curating--118161433">
+<pre>close</pre>
 </div>
 <div created="20220513083711981" modified="20220513083713470" title="$:/state/toc/TableOfContents/Artistic Practice-Installation--118161433">
 <pre>close</pre>
@@ -13365,8 +13369,8 @@ exports.context = contextWidget;
 <div created="20220513080643746" modified="20220513083727181" title="$:/state/toc/TableOfContents/Current and Selected Work-Current Work--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513065839196" modified="20220513091207264" title="$:/state/toc/TableOfContents/Current and Selected Work-Selected Work--118161433">
-<pre>open</pre>
+<div created="20220513065839196" modified="20220513114511579" title="$:/state/toc/TableOfContents/Current and Selected Work-Selected Work--118161433">
+<pre>close</pre>
 </div>
 <div created="20210926070707157" modified="20211005145317550" title="$:/state/toc/TableOfContents/Current Projects-Global Ethnic Majorities Board Association--118161433">
 <pre>close</pre>
@@ -13380,7 +13384,7 @@ exports.context = contextWidget;
 <div created="20220513071152918" modified="20220513071205389" title="$:/state/toc/TableOfContents/Projects by year-2021--118161433">
 <pre>close</pre>
 </div>
-<div created="20220218174354532" modified="20220322083451979" title="$:/state/toc/TableOfContents/Resources-artist resources--118161433">
+<div created="20220218174354532" modified="20220513114731649" title="$:/state/toc/TableOfContents/Resources-artist resources--118161433">
 <pre>open</pre>
 </div>
 <div created="20211203103956856" modified="20220223054650051" title="$:/state/toc/TableOfContents/Resources-trustee resources--118161433">
@@ -13401,8 +13405,8 @@ exports.context = contextWidget;
 <div created="20220513071410652" modified="20220513071412948" title="$:/state/toc/TableOfContents/Study-Research--118161433">
 <pre>open</pre>
 </div>
-<div created="20220513091541376" modified="20220513091541376" title="$:/state/toc/TableOfContents/Study-Themes--118161433">
-<pre>open</pre>
+<div created="20220513091541376" modified="20220513114518675" title="$:/state/toc/TableOfContents/Study-Themes--118161433">
+<pre>close</pre>
 </div>
 <div created="20220513091104969" modified="20220513091106074" title="$:/state/toc/TableOfContents/Talks and Workshops-Workshops--118161433">
 <pre>close</pre>
@@ -13455,7 +13459,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Hello [[Current Work]]" title="$:/StoryList">
+<div created="20220513114528179" list="" modified="20220513122001906" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13771,6 +13775,29 @@ Born in Singapore, Jack is based in Galloway, Southwest Scotland.
 <div created="20210927081650216" modified="20210927081650216" title="Actor-Network Theory">
 <pre></pre>
 </div>
+<div created="20220513115023083" modified="20220513121911609" tags="Glossary" title="agree ... but">
+<pre>!!! Usage
+
+//‘we agree artists should be paid but there simply isn't the budget’//
+
+!!! Normal meaning
+
+This usually indicates that a proposition holds true but with a condition or an exception.  For example, we agree that the sky is blue, but at dawn and dusk it turns red. Or we agreed to drive to London from Manchester, but will take a detour via York. 
+
+The proposition is held as true and performed as such. But the exception occurs for a short time (at dawn/dusk) or as an addition (detour to York).
+
+!!! What institutions mean
+
+//‘We disagree’//
+
+Here institutions are separating the ethical content of a proposition from its performance in order to discard the performance by an appeal to [[logistics]]. In this example, the institution could have also said,// 'we disagree that artists should be paid'//.
+
+Were it the case that the institution normally pays artists, but due to exceptional circumstances the artist could not be paid in this instance, then the normal meaning of 'agree ... but' holds sway. Where the institution regularly cites exceptional circumstances in order not to pay artists as a rule, then when you hear this phrase it should be understood as meaning 'we disagree'.
+
+!!! What this means ethically
+
+Practically this means that artists are working for free. However, the violence of this way of asking for free labour is especially pernicious because it starts by validating the work, then immediately erasing or emptying the work of value. </pre>
+</div>
 <div created="20220208153617453" modified="20220208153645940" tags="Resources" title="artist resources">
 <pre></pre>
 </div>
@@ -13893,7 +13920,7 @@ A charity that is //unincorporated// means that there is no separate legal entit
 * From [[The Essential Trustee: Your charity's legal structure and what it means|https://www.gov.uk/government/publications/the-essential-trustee-what-you-need-to-know-cc3/the-essential-trustee-what-you-need-to-know-what-you-need-to-do#your-charitys-legal-structure-and-what-it-means]]
 </pre>
 </div>
-<div created="20210928082820116" modified="20220513090211914" tags="ceramics [[Talks and Workshops]] 2021" title="Clay Commons">
+<div created="20210928082820116" modified="20220513114538776" tags="ceramics 2021 Talks" title="Clay Commons">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/ClayCommonsLogo.jpg?raw=true]]
 
 ''Clay Commons Podcast, Aug-Sep 2021
@@ -14019,10 +14046,10 @@ It isn't about following rules by rote or reacting to circumstances. Trustees do
 
 [[Selected Work]]</pre>
 </div>
-<div created="20220513065347695" modified="20220513110841215" tags="[[Current and Selected Work]]" title="Current Work">
+<div created="20220513065347695" modified="20220513114445926" tags="[[Current and Selected Work]]" title="Current Work">
 <pre>|[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/FACT%20sample%20contract.jpg]]|[[Sample artist contract]] (Apr 2021) - A model contract that FACT Liverpoool  commissioned me to write for myself and for their future artists.|
 |[img[https://github.com/jackkytan/websiteimages/blob/master/devising%20governance%20loops.png?raw=true]]|[[Devising Governance]] (June 2021 - Jul 2022) - a year long laboratory at the Scottish Sculpture Workshop (SSW) where new ideas for governance and organisational behaviour will be derived from sculptural processes and tested by the organisation through a framework of performance art.|
-|[img[https://github.com/jackkytan/websiteimages/blob/master/FACT-building.jpg?raw=true]]|[FACT Board Artist-in-Residence]] (Apr 2021 - May 2022) - As the inaugural artist-in-residence on the Board of Trustees at FACT Liverpool, I will be exploring ‘Boardness’ itself as artistic medium and as curatorial space.|
+|[img[https://github.com/jackkytan/websiteimages/blob/master/FACT-building.jpg?raw=true]]|[[FACT Board Artist-in-Residence]] (Apr 2021 - May 2022) - As the inaugural artist-in-residence on the Board of Trustees at FACT Liverpool, I will be exploring ‘Boardness’ itself as artistic medium and as curatorial space.|
 |[img[https://github.com/jackkytan/websiteimages/blob/master/Dance%20Art%20Foundation%20-%20into_the_mountain_edit_193-1.jpg?raw=true]]|[[Dance Art Foundation Artist Council]] (Sep 2020 - ongoing) - I am part of  of the Dance Art Foundation's artist council who convene to advise, reflect and share knowledge about making, organising, governance, leadership, redistribution and participation in the contemporary dance sector.|
 |[img[https://github.com/jackkytan/websiteimages/blob/master/Theatre%20in%20the%20Mill%20front.jpg?raw=true]]|[[Theatre in the Mill Advisory Board]] (April 2022 - ongoing) - I have joined ~TiM's advisory board to help the organisation think through governance, its vision, programming, relevance and further develop its relationship with Bradford University.|
 
@@ -14079,7 +14106,7 @@ Some visuals from our instagram campaign:
 |[img[https://github.com/jackkytan/websiteimages/blob/master/Defund%20CFCCA%20-%20red5.png?raw=true]]|
 </pre>
 </div>
-<div created="20211203113843510" modified="20220513090211915" tags="[[Talks and Workshops]] [[artist resources]] 2021" title="Desire Lines">
+<div created="20211203113843510" modified="20220513114550161" tags="[[artist resources]] 2021 Talks" title="Desire Lines">
 <pre>A 3 day conference on 11-13 Nov 2021 organised by [[Proforma (Manchester)|https://www.proforma.org.uk/desirelines]] on the future of artists' exchanges and residencies in Europe. I was in conversation with arts sector researcher [[Dr Susan Jones |https://padwickjonesarts.co.uk/]] on the issues surrounding artists survivability.
 
 Read a booklet about my in conversation with Dr Susan Jones on artist 'liveability': https://www.proforma.org.uk/desire-lines-booklet
@@ -14429,6 +14456,15 @@ Join our mailing list [[here|https://be91f51d.sibforms.com/serve/MUIEACV8M3ofzFX
 *[[26 Oct 2021 GEMBA Meeting]]
 * [[6 April 2022 GEMBA Meeting]]</pre>
 </div>
+<div created="20220513114748335" modified="20220513121335725" tags="" title="Glossary">
+<pre>Commissioned by [[Industria|https://www.we-industria.org/]].
+
+An evaluation of the Artists Leaks data. 
+
+-----
+
+[[agree ... but]]</pre>
+</div>
 <div created="20210925110057227" modified="20220513091252379" tags="[[Selected Work]] Installation Performances 2016" title="Hearings">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Hearings_mg_1290.jpg?raw=true]]
 
@@ -14507,7 +14543,7 @@ For his first major solo exhibition, London-based Singaporean artist Jack Tan (b
 <div created="20211203084108568" modified="20211203084207133" tags="Curating" title="I See I Don't See">
 <pre></pre>
 </div>
-<div created="20210925123446896" modified="20220513090211916" tags="[[Talks and Workshops]] [[Global Ethnic Majorities Board Association]] 2020 [[performance score]]" title="In conversation with Jade Montserrat, Amy Lawrence and Jack Tan">
+<div created="20210925123446896" modified="20220513114559300" tags="[[Global Ethnic Majorities Board Association]] 2020 [[performance score]] Talks" title="In conversation with Jade Montserrat, Amy Lawrence and Jack Tan">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Jade%20Montserrat_ecclesiastes-1250x560-1.jpg?raw=true]]
 
 ''6pm, 16 December 2020 via Zoom''
@@ -14557,7 +14593,7 @@ Below is an extract of my puzzle showing the first of two pages:
 <div created="20210925121944347" modified="20220513065009191" tags="[[Artistic Practice]]" title="Installation">
 <pre></pre>
 </div>
-<div created="20211203112116322" modified="20220513090211916" tags="care [[Selected Work]] 2021 [[Talks and Workshops]]" title="Institutional Critique as Loving Activism">
+<div created="20211203112116322" modified="20220513114608223" tags="care [[Selected Work]] 2021 Talks" title="Institutional Critique as Loving Activism">
 <pre>!!Institutional Critique as Loving Activism
 
 Provocation text for “Creative Critique as Care: How can artists embed institutional critique in creative practice?” panel at the [[Handle With Care conference|https://www.dropbox.com/s/krdzthrlng8n8zd/handlewithcare-onlin_programme_single-pages.pdf?dl=0]]. Co-presenters on this panel were artists [[Jade Montserrat|https://jademontserrat.com/]] and Paul Hughes.
@@ -15288,7 +15324,7 @@ Our approach to reading and reading groups is developing with time, but here are
 <div created="20211203083608282" modified="20211203083629362" tags="TableOfContents" title="Resources">
 <pre></pre>
 </div>
-<div created="20211109121404645" modified="20220513090245528" tags="charities [[Talks and Workshops]] governance [[trustee resources]] trustee 2021 Workshops" title="Roundtable on Trustee's duties">
+<div created="20211109121404645" modified="20220513114618571" tags="charities governance [[trustee resources]] trustee 2021 Workshops" title="Roundtable on Trustee's duties">
 <pre>Signposts for LUX trustees (9 Nov 2021 roundtable)
 
 !!A roundtable workshop discussion about trustee's duties, liabilities and developing a critical trusteeship.
@@ -15441,7 +15477,7 @@ The idea of chance not only alludes to John Cage and his idea that ‘everything
 
 </pre>
 </div>
-<div created="20211203105617490" modified="20220513090211918" tags="[[Talks and Workshops]] care 2021" title="SEPALS conference">
+<div created="20211203105617490" modified="20220513114628274" tags="care 2021 Talks" title="SEPALS conference">
 <pre>I presented a talk on how we move from activism to a beyond of activism to imagine new methodologies or ways of experimenting to create a new arts ecology.
 
 [[Read the text of my talk BEYOND ACTIVISM here|https://docs.google.com/document/d/1x5ZIX8KHUTQ1m1vPat77z49Ma56kxlg5LnkjoKM6XfA/edit?usp=sharing]]
