--- a/index.html
+++ b/index.html
@@ -13216,10 +13216,10 @@ exports.context = contextWidget;
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20211209081213628" modified="20220513110226263" title="$:/state/toc/TableOfContents-About--118161433">
+<div created="20211209081213628" modified="20220514062340349" title="$:/state/toc/TableOfContents-About--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513071259660" modified="20220513114509355" title="$:/state/toc/TableOfContents-Artistic Practice--118161433">
+<div created="20220513071259660" modified="20220514062339133" title="$:/state/toc/TableOfContents-Artistic Practice--118161433">
 <pre>close</pre>
 </div>
 <div created="20220223054537977" modified="20220513064752478" title="$:/state/toc/TableOfContents-Artworks--118161433">
@@ -13234,7 +13234,7 @@ exports.context = contextWidget;
 <div created="20211203110358830" modified="20220513065223638" title="$:/state/toc/TableOfContents-Current and Recent Work--118161433">
 <pre>open</pre>
 </div>
-<div created="20220513065309542" modified="20220513124133159" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
+<div created="20220513065309542" modified="20220514062337701" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926064611805" modified="20211203104743036" title="$:/state/toc/TableOfContents-Current Projects--118161433">
@@ -13273,7 +13273,7 @@ exports.context = contextWidget;
 <div created="20211005145901891" modified="20220513071210173" title="$:/state/toc/TableOfContents-Residencies--118161433">
 <pre>open</pre>
 </div>
-<div created="20211203083716975" modified="20220513124134014" title="$:/state/toc/TableOfContents-Resources--118161433">
+<div created="20211203083716975" modified="20220514062336349" title="$:/state/toc/TableOfContents-Resources--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926053815363" modified="20220218174407788" title="$:/state/toc/TableOfContents-Sculpture--118161433">
@@ -13285,10 +13285,10 @@ exports.context = contextWidget;
 <div created="20210925130341602" modified="20220223054344263" title="$:/state/toc/TableOfContents-Social Practice--118161433">
 <pre>open</pre>
 </div>
-<div created="20220513071349532" modified="20220513114519819" title="$:/state/toc/TableOfContents-Study--118161433">
+<div created="20220513071349532" modified="20220514062332917" title="$:/state/toc/TableOfContents-Study--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513090317597" modified="20220513114629874" title="$:/state/toc/TableOfContents-Talks and Workshops--118161433">
+<div created="20220513090317597" modified="20220514062330453" title="$:/state/toc/TableOfContents-Talks and Workshops--118161433">
 <pre>close</pre>
 </div>
 <div created="20210925123830757" modified="20220513085902952" title="$:/state/toc/TableOfContents-Talks--118161433">
@@ -13297,10 +13297,10 @@ exports.context = contextWidget;
 <div created="20220223054502133" modified="20220513071356044" title="$:/state/toc/TableOfContents-Themes--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513085809112" modified="20220513114631498" title="$:/state/toc/TableOfContents-Work by year--118161433">
+<div created="20220513085809112" modified="20220514062331702" title="$:/state/toc/TableOfContents-Work by year--118161433">
 <pre>close</pre>
 </div>
-<div created="20211005150956272" modified="20220513114634923" title="$:/state/toc/TableOfContents-Writing--118161433">
+<div created="20211005150956272" modified="20220514062328085" title="$:/state/toc/TableOfContents-Writing--118161433">
 <pre>close</pre>
 </div>
 <div created="20211214093344462" modified="20220218073124706" title="$:/state/toc/TableOfContents/About-CV--118161433">
@@ -13384,8 +13384,8 @@ exports.context = contextWidget;
 <div created="20220513071152918" modified="20220513071205389" title="$:/state/toc/TableOfContents/Projects by year-2021--118161433">
 <pre>close</pre>
 </div>
-<div created="20220218174354532" modified="20220513114731649" title="$:/state/toc/TableOfContents/Resources-artist resources--118161433">
-<pre>open</pre>
+<div created="20220218174354532" modified="20220514062335237" title="$:/state/toc/TableOfContents/Resources-artist resources--118161433">
+<pre>close</pre>
 </div>
 <div created="20211203103956856" modified="20220223054650051" title="$:/state/toc/TableOfContents/Resources-trustee resources--118161433">
 <pre>close</pre>
@@ -13459,7 +13459,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220513114528179" list="" modified="20220513122001906" title="$:/StoryList">
+<div created="20220514062225751" list="" modified="20220514062328565" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -14982,7 +14982,7 @@ Go to the FACT website to see the work: https://www.fact.co.uk/learning-non-huma
 <div created="20211029073333808" modified="20211214094451991" tags="Themes" title="more than human">
 <pre></pre>
 </div>
-<div created="20220513093023625" modified="20220513110157968" tags="About" title="My Cloud">
+<div created="20220513093023625" modified="20220514062322711" tags="About" title="My Cloud">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/eight%20immortals%20cnag241711.jpg?raw=true]]
 
 A leftover from my youth as a (Evangelical Methodist) Christian, I have retained the idea of there being a great 'cloud of witnesses' around me:
@@ -15003,7 +15003,9 @@ The image above is of the [[Eight Immortals]], figures from Chinese mythology da
 Ba xian guo hai, ge xian shen tong (八仙過海, 各顯神通) — &quot;The Eight Immortals cross the sea, each revealing their divine powers.&quot;
 &lt;&lt;&lt;
 
-This proverb is often interpreted to mean that everyone has unique gifts, talents or tools and no matter how exceptional they can (and should?) be used to contribute towards a shared endeavour or journey, e.g., crossing the sea. A bit like ancient Super Sentai (Power Rangers)! For me, when I think about past and present artists, creatives and activists, I see their 'super power' and am glad that they are around me, like a cloud.</pre>
+This proverb is often interpreted to mean that everyone has unique gifts, talents or tools and no matter how exceptional they can (and should?) be used to contribute towards a shared endeavour or journey, e.g., crossing the sea. A bit like ancient Super Sentai (Power Rangers)! For me, when I think about past and present artists, creatives and activists, I see their 'super power' and am glad that they are around me, like a cloud.
+
+In the weeks, months and years to come I will be adding here profiles and links to the works of people (human or more-than-human) who form this cloud.</pre>
 </div>
 <div created="20210925122257314" modified="20211214094451991" tags="Themes" title="new materialism">
 <pre>Watch this space for more information about New Materialism and how this informs my practice.
